# workassit

./: .coverage  .gitignore  AGENTS.md  Project OS.spec  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
a/: project.json
app/api/: server.py
app/bridge/: api_bridge.py
app/config/: constants.py  settings.py
app/database/: connection.py  indexer.py
app/models/: audit.py  checklist.py  domain.py  project.py  template.py
app/repositories/: audit_repository.py  checklist_repository.py  project_repository.py  settings_repository.py
app/services/: ai_service.py  backup_service.py  data_scrubber.py  delivery_service.py  file_service.py  project_service.py  rollout_service.py  search_service.py  workspace_scan_service.py
app/templates/: default.json  loader.py
app/ui/: create_project_dialog.py  dashboard_view.py  main_window.py  project_view.py  settings_view.py
app/utils/: atomic_json.py  logging_config.py  path_validator.py  runtime_paths.py
docs/: ARCHITECTURE.md  OPERATIONS.md  PHASES.md  PRD.md
scripts/: build.py
tests/unit/: test_ai_service.py  test_api_bridge.py  test_atomic_json.py  test_audit_repository.py  test_backup_service.py  test_checklist_repository.py  test_data_scrubber.py  test_delivery_service.py  test_file_service.py  test_indexer.py  test_path_validator.py  test_project_repository.py  test_project_service.py  test_rollout_service.py  test_runtime_paths.py  test_search_service.py  test_settings_repository.py  test_workspace_scan_service.py
web/: app.js  index.html  styles.css
