[project]
name = "project-os"
version = "0.1.0"
description = "Project OS for network and security deployment engineers"
authors = [{name = "Developer"}]
requires-python = ">=3.11"
dependencies = [
    "pywebview>=4.4.1",
    "keyring>=25.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
